--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -48,6 +48,8 @@
 @import "modules/parts/contactBlock"
 @import "modules/parts/pagination"
 
+// pages
+@import "pages/employee"
 
 html
   font-size: 16px
