Second employee page is ready

--- a/src/collective.pug
+++ b/src/collective.pug
@@ -44,7 +44,7 @@ block content
                                         else
                                             | Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек,
                                             span.grey  открывший истину, которого я бы назвал зодчим ...
-                                    a(href= index === 0 ? 'employee.html' : '#').collectiveSlide__link
+                                    a(href= index === 0 ? 'employee.html' : 'employee_2.html').collectiveSlide__link
                                         span
                                         | Подробнее
                                 if(index === 0)
