--- a/src/styles/pages/employee.sass
+++ b/src/styles/pages/employee.sass
@@ -6,6 +6,15 @@ $employeeSecondResponse: 800px
 
 .employee
 
+  &__groups
+
+    h2
+        font-size: rem(20)
+        margin-bottom: em(24, 20)
+
+    .groups
+      gap: em(24, 16)
+
   @media screen and (max-width: $employeeFirstResponse)
     flex-direction: column
 
