Gallery page is ready

--- a/src/components/asides/asideForAbout.pug
+++ b/src/components/asides/asideForAbout.pug
@@ -1,4 +1,4 @@
 include aside
 
 mixin asideForAbout(activeIndex)
-    +aside([{text: 'О нас', link: 'about.html'}, {text: 'Наш коллектив', link: 'collective.html'}, {text: 'Наши галереи', link: '#'}, {text: 'Наши видео', link: '#'}, {text: 'Наши достижения', link: '#'}, {text: 'Наши реквизиты', link: '#'}], activeIndex)
+    +aside([{text: 'О нас', link: 'about.html'}, {text: 'Наш коллектив', link: 'collective.html'}, {text: 'Наши галереи', link: 'gallery.html'}, {text: 'Наши видео', link: '#'}, {text: 'Наши достижения', link: '#'}, {text: 'Наши реквизиты', link: '#'}], activeIndex)
