--- a/src/layouts/modules/parts/ourVideos.pug
+++ b/src/layouts/modules/parts/ourVideos.pug
@@ -1,5 +1,6 @@
 include ../../../components/titles/h2WithIcon
 include ../../../components/UI/whiteButton
+include ../../../components/ourVideos
 
 -
     var data = [
@@ -13,14 +14,5 @@ section
     .container
         +h2WithIcon('@img/video.svg', 'Наши видео')
         .ourVideos
-            each item in data
-                a.ourVideos__item(href='#')
-                    .tinyText 12 июля 2023
-                    .ourVideos__img.border-radius
-                        img.border-radius(src=item.img, alt=item.text)
-                        .videoSign
-                    .ourVideos__text
-                        svg
-                            use(href="@img/icons/icons.svg#video-triangle")
-                        span= item.text
+            +ourVideos()
         +whiteButton('Смотреть все видео', 'w-100 mt-step')
