--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -52,6 +52,7 @@
 @import "pages/employee"
 @import "pages/gallery"
 @import "pages/ourVideos"
+@import "pages/achievements"
 
 html
   font-size: 16px
