--- a/src/styles/modules/UI/buttons.sass
+++ b/src/styles/modules/UI/buttons.sass
@@ -10,6 +10,10 @@
   transition: $defaultTransitionDuration all
   font-weight: 800
 
+  &.arrow-bottom
+    .icon
+      transform: rotate(90deg)
+
   &.bigButton
     padding: em(30, 20)
     font-size: em(20, 16)
