Our groups page is ready

--- a/src/layouts/modules/main/footer.pug
+++ b/src/layouts/modules/main/footer.pug
@@ -24,13 +24,13 @@ footer
                             use(href="@img/icons/icons.svg#arrow-select")
                     ul.footer__list
                         li
-                            a.link(href="#") Сведения об образовательной организации
+                            a.link(href="information.html") Сведения об образовательной организации
                         li
                             a.link(href="#") Новости
                         li
-                            a.link(href="#") Группы
+                            a.link(href="ourGroups.html") Группы
                         li
-                            a.link(href="#") Коллектив
+                            a.link(href="collective.html") Коллектив
                         li
                             a.link(href="#") Контакты
                         li
