--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -21,11 +21,11 @@ header
                             li
                                 a.link(href="#") Новости
                             li
-                                a.link(href="#") Группы
+                                a.link(href="ourGroups.html") Группы
                             li
                                 a.link(href="#") Родителям
                             li
-                                a.link(href="#") О нас
+                                a.link(href="about.html") О нас
                             li
                                 a.link(href="#") Контакты
                         .header__burgerWrapper#burger
