--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -24,3 +24,6 @@ $headerFirstThemeResponse: 1300px
 
 $sidebarResponseNumber: 900
 $sidebarResponse: $sidebarResponseNumber + px
+
+$gridX2ResponseNumber: 900
+$gridX2Response: $gridX2ResponseNumber + px
