--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -53,6 +53,7 @@
 @import "pages/gallery"
 @import "pages/ourVideos"
 @import "pages/achievements"
+@import "pages/ourGroups"
 
 html
   font-size: 16px
