--- a/src/components/groups.pug
+++ b/src/components/groups.pug
@@ -3,7 +3,7 @@ mixin groups(limit= 8)
     .groups
         while index < limit
             - index++
-            a.groups__item(href='#')
+            a.groups__item(href='group.html')
                 .groups__img
                     img(src="@img/temporary/groups-1.png")
                 .groups__info
