--- a/src/ourGroups.pug
+++ b/src/ourGroups.pug
@@ -17,7 +17,7 @@ block content
         .container
             .gridX2.d-gap
                 each text in ['Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'Солнышко', 'Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'С более длинным названием', 'Солнышко', 'С более длинным названием']
-                    a.groups__item.gridX2Item.groups__item--big(href='#')
+                    a.groups__item.gridX2Item.groups__item--big(href='group.html')
                         .groups__img
                             img(src="@img/temporary/groups-2.png")
                         .groups__info.ml-auto.mr-auto
