--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -65,6 +65,7 @@
   --groupHoverBackground: #0074FF
 
   --linkColor: #0074FF
+  --groupFileColor: #373737
 
   --videoHoverFilter: #0B1E64
 
@@ -80,3 +81,5 @@
   --paginationColor: #212B36
   --paginationDisabledColor: #919EAB
   --paginationArrowColor: #C4CDD5
+
+  --fileLinkBackground: #EFF1F8
