--- a/src/styles/themes/visually-impaired.sass
+++ b/src/styles/themes/visually-impaired.sass
@@ -65,6 +65,7 @@
   --groupHoverBackground: #0074FF
 
   --linkColor: #0074FF
+  --groupFileColor: #373737
 
   --videoHoverFilter: #0B1E64
 
@@ -81,3 +82,4 @@
   --paginationDisabledColor: #919EAB
   --paginationArrowColor: #C4CDD5
 
+  --fileLinkBackground: #EFF1F8
