--- a/src/layouts/modules/parts/achievements.pug
+++ b/src/layouts/modules/parts/achievements.pug
@@ -7,4 +7,4 @@ section
     .container
         +h2WithIcon('@img/achievements.svg', 'Наши достижения')
         +achievements()
-        +whiteButton('Смотреть все достижения', 'w-100 mt-step')
+        +whiteButton('Смотреть все достижения', 'w-100 mt-step', 'achievements.html')
