--- a/src/layouts/modules/parts/ourGallery.pug
+++ b/src/layouts/modules/parts/ourGallery.pug
@@ -10,4 +10,4 @@ section
             .swiper-wrapper
                 +gallery()
             +slideButtons(true)
-        +whiteButton('Смотреть все галереи', 'w-100 mt-step')
+        +whiteButton('Смотреть все галереи', 'w-100 mt-step', 'ourGallery.html')
