--- a/src/layouts/modules/parts/ourVideos.pug
+++ b/src/layouts/modules/parts/ourVideos.pug
@@ -15,4 +15,4 @@ section
         +h2WithIcon('@img/video.svg', 'Наши видео')
         .ourVideos
             +ourVideos()
-        +whiteButton('Смотреть все видео', 'w-100 mt-step')
+        +whiteButton('Смотреть все видео', 'w-100 mt-step', 'ourVideos.html')
