--- a/src/layouts/modules/parts/usefulLinks.pug
+++ b/src/layouts/modules/parts/usefulLinks.pug
@@ -10,4 +10,4 @@ section
             while (index <= 10)
                 a.link-block(href="#")
                     img(src=`@img/temporary/links-${index++}.png`, alt='link')
-        +whiteButton('Смотреть все полезные ссылки', 'mt-step w-100', 'document.location.href="usefulLinks.html"')
+        +whiteButton('Смотреть все полезные ссылки', 'mt-step w-100', 'usefulLinks.html')
