--- a/src/layouts/template.pug
+++ b/src/layouts/template.pug
@@ -14,5 +14,6 @@ html(lang='en')
         main
             block content
         include modules/main/footer
+        script(src="https://www.youtube.com/player_api")
         script(src="scripts/bvi.min.js")
         script(src="scripts/main.min.js")
