--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -47,5 +47,5 @@ header
                             img(src="@img/ok.svg" alt='Одноклассники')
                         a.header__social(href="https://telegram.org" target="blank")
                             img(src="@img/telegram.svg" alt='Телеграм')
-                    +usualButton('Обратная связь', '', 'document.location.href="feedback.html"')
+                    +usualButton('Обратная связь', '', 'feedback.html')
     block breadcrumbs
