--- a/src/layouts/modules/parts/bigBannerBlue.pug
+++ b/src/layouts/modules/parts/bigBannerBlue.pug
@@ -7,7 +7,7 @@ section
                 .banner__subtitle МДОАУ
                 .banner__title Детский сад №73
                 .banner__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину.
-                +whiteButton('Подробнее о нас', 'bigButton', "document.location.href='about.html'")
+                +whiteButton('Подробнее о нас', 'bigButton', "about.html")
             a.banner__image(href="#" target="blank")
                 div.img
                     img(src="@img/temporary/banner-2.png" alt='image')
