--- a/src/gallery.pug
+++ b/src/gallery.pug
@@ -8,7 +8,7 @@ include components/breadcrumbs
 include components/galleryGrid
 
 block variables
-    - var pageTitle = 'Наши группы'
+    - var pageTitle = 'Галерея'
 
 block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Страница галереи'}], 'Страница галереи')
