--- a/src/styles/modules/parts/galleryItem.sass
+++ b/src/styles/modules/parts/galleryItem.sass
@@ -36,11 +36,11 @@ html.theme-visually-impaired
     width: 100%
     height: em(123, 16)
     max-height: 123px
-    object-fit: cover
 
     img
       border-radius: .5em
       width: 100%
+      height: 100%
       object-fit: cover
 
   &__text
