--- a/src/styles/pages/ourGroups.sass
+++ b/src/styles/pages/ourGroups.sass
@@ -10,3 +10,10 @@
 
     @media screen and (max-width: $gridX2Response)
       flex: 0 0 100%
+
+  &--fastReverse
+
+    @media screen and (max-width: 1200px)
+
+      .gridX2Item
+        flex: 0 0 100%
