--- a/src/styles/modules/grid/gridX5AndX4.sass
+++ b/src/styles/modules/grid/gridX5AndX4.sass
@@ -1,5 +1,5 @@
-@import "../assets/mixins"
-@import "../assets/vars"
+@import "../../assets/mixins"
+@import "../../assets/vars"
 
 $firstGridTextResponseNumber: 1100
 $firstGridTextResponse: $firstGridTextResponseNumber + px
