--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -52,12 +52,15 @@
 @import "modules/parts/galleryGrid"
 @import "modules/parts/video"
 
+// grids
+@import "modules/grid/gridX2"
+@import "modules/grid/gridX5AndX4"
+@import "modules/grid/gridX3"
+
 // pages
 @import "pages/employee"
-@import "pages/gallery"
-@import "pages/ourVideos"
 @import "pages/achievements"
-@import "pages/ourGroups"
+
 
 html
   font-size: 16px
