--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -19,11 +19,11 @@ header
                             li
                                 a.link(href="/") Главная
                             li
-                                a.link(href="#") Новости
+                                a.link(href="news.html") Новости
                             li
                                 a.link(href="ourGroups.html") Группы
                             li
-                                a.link(href="#") Родителям
+                                a.link(href="order.html") Родителям
                             li
                                 a.link(href="about.html") О нас
                             li
