--- a/src/components/asides/asideForParents.pug
+++ b/src/components/asides/asideForParents.pug
@@ -1,4 +1,4 @@
 include aside
 
 mixin asideForParents(activeIndex)
-    +aside([{text: 'Порядок приема в детсад', link: 'order.html'}, {text: 'Компенсация оплаты за сад', link: 'compensation.html'}, {text: 'Бланки заявлений', link: 'galleries.html'}, {text: 'Частые вопросы', link: 'ourVideos.html'}, {text: 'Советы специалистов', link: 'achievements.html'}, {text: 'Школы рядом с садиком', link: 'requisites.html'}], activeIndex)
+    +aside([{text: 'Порядок приема в детсад', link: 'order.html'}, {text: 'Компенсация оплаты за сад', link: 'compensation.html'}, {text: 'Бланки заявлений', link: 'blanks.html'}, {text: 'Частые вопросы', link: 'questions.html'}, {text: 'Советы специалистов', link: 'advices.html'}, {text: 'Школы рядом с садиком', link: 'schools.html'}], activeIndex)
