--- a/src/styles/modules/parts/linkFile.sass
+++ b/src/styles/modules/parts/linkFile.sass
@@ -22,6 +22,14 @@ $firstLinkFileTextResponse: $firstLinkFileTextResponseNumber + px
     max-width: 53px
     max-height: 53px
 
+    &--doc
+      min-width: em(56, 16)
+      min-height: em(56, 16)
+      width: em(56, 16)
+      height: em(56, 16)
+      max-width: 56px
+      max-height: 56px
+
     img
       width: 100%
       height: 100%
