--- a/src/styles/modules/parts/table2Col.sass
+++ b/src/styles/modules/parts/table2Col.sass
@@ -1,29 +1,37 @@
 @import "../../assets/mixins"
 
-.schedule
+.table2Col
   display: grid
-  grid-template-columns: em(163, 16) 1fr
+  grid-template-columns: minmax(em(163, 16), auto) minmax(50%, 1fr)
   grid-auto-rows: em(64, 16)
   align-items: center
   border: 1px solid var(--greyBackground)
   border-radius: em(15, 16)
 
-  &__time
-    color: var(--colorScheduleTime)
-    padding-right: em(39, 16)
-
   &__item
     @include useSecondFont(500)
     font-size: em(14, 16)
     line-height: 1
-    padding-left: em(15, 14)
+    padding: em(15, 14)
     letter-spacing: -0.005em
     height: 100%
     display: flex
     flex-direction: column
     justify-content: center
 
-    &:not(:last-child),
-    &:not(:nth-last-child(2))
+    &:nth-child(odd)
+      color: var(--colorScheduleTime)
+      border-radius: em(15, 16) 0 0 em(15, 16)
+
+    &:nth-child(even)
+      border-radius: 0 em(15, 16) em(15, 16) 0
+
+
+    &:not(:nth-last-child(2),:last-child)
       border-bottom: 1px solid var(--greyBackground)
 
+  &--noBorder
+    border: none
+
+  .table2Col__item
+    border: none
