Contact page is ready

--- a/src/components/contactBlock.pug
+++ b/src/components/contactBlock.pug
@@ -15,7 +15,7 @@ mixin contactBlock(className)
                 li.contactBlock__item +7 (3532) 43-20-73
 
             .contactBlock__title
-                img.contactBlock__icon(src="@img/map.svg", alt='phone icon')
+                img.contactBlock__icon(src="@img/map.svg", alt='map icon')
                 | Адрес
             ul.contactBlock__list
                 li.contactBlock__item г. Оренбург, ул.Чкалова, 43/1
