--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -51,6 +51,8 @@
 @import "modules/parts/table2Col"
 @import "modules/parts/galleryGrid"
 @import "modules/parts/video"
+@import "modules/parts/contactInfo"
+@import "modules/parts/socials"
 
 // grids
 @import "modules/grid/gridX2"
