--- a/src/layouts/modules/main/footer.pug
+++ b/src/layouts/modules/main/footer.pug
@@ -79,7 +79,7 @@ footer
                     .footer__restItem
                         a(href="#") Политика конфиденциальности
                     .footer__restItem
-                        a(href="#") Карта сайта
+                        a(href="map.html") Карта сайта
                 .footer__restBlock.footer__restBlock--developer
                     | Сайт разработан в
                     a(href="#" target="blank").footer__developerLogo
